src/assets/css/chatFrame.css
@import './variables.css';

.frame {
	position: relative;
	display: flex;
	justify-content: center;
	width: 80vw;
	height: 80vh;
	background-color: var(--lightGrey);
	border-radius: 50px;
}

.messages {
	display: flex;
	flex-direction: column;
	height: 90%;
	width: 100%;
	margin: auto 0;
	overflow: scroll;
}

